# yolo-validator

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  YOLO26.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
benchmarks/: aggregate.py  batch_sweep.py  benchmark_a.py  canonical_eval.py  coco_dataset.py  compare_edgefirst.py  export_tflite_int8.py  hailo_compile.py  hailo_fetch_zoo.sh  hailo_infer.py  hailo_install_dfc.sh  jetson_install_ultralytics.sh  jetson_yv_seg_memprobe.sh  normalize.py  platforms.py  rebin.py  run_jetson_trt.sh  runners.py  studio_fetch.py  tflite_infer.py
benchmarks/metrics/: imx8mp-vsi.json  imx95-neutron.json  macos-onnx-coreml.json  onnx-cpu.json  onnx-cuda.json  orin-nano-tensorrt.json  rpi5-hailo8l.json
tests/: conftest.py  test_backends_contract.py  test_canonical_eval.py  test_cli.py  test_coco_eval.py  test_coco_output.py  test_hailo_decode.py  test_letterbox.py  test_masks.py  test_masks_fidelity.py  test_nms.py  test_onnx_backend.py  test_pipeline.py  test_postprocess.py  test_postprocess_e2e.py  test_preprocess.py  test_rebin.py  test_release_fixes.py  test_stats.py  test_tensorrt_loader.py  test_variants.py
yolo_validator/: __init__.py  _stats.py  cli.py  coco_eval.py  coco_output.py  detections.py  imageio.py  letterbox.py  masks.py  nms.py  pipeline.py  postprocess.py  postprocess_e2e.py  postprocess_torch.py  preprocess.py  preprocess_torch.py
yolo_validator/backends/: __init__.py  onnxruntime_backend.py  (+1 more)
